force-app/main/default/objects/Pickup_Delivery_Route__c/Pickup_Delivery_Route__c.object-meta.xml
<CustomObject>
    <label>Pickup &amp; Delivery Route</label>
    <nameField>
        <label>Route Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pickup &amp; Delivery Routes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>