force-app/main/default/objects/Pickup_Delivery_Route__c/fields/BVC_Hub__c.field-meta.xml
<CustomField>
    <fullName>BVC_Hub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BVC Hub</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>BVC Pickup &amp; Delivery Routes</relationshipLabel>
    <relationshipName>BVCPickup_Delivery_Routes</relationshipName>
    <type>Lookup</type>
</CustomField>