force-app/main/default/objects/Pickup_Delivery_Route__c/fields/Delivery_Route_Assigned_At__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Route_Assigned_At__c</fullName>
    <label>Delivery Route Assigned At</label>
    <type>Time</type>
</CustomField>