force-app/main/default/objects/Pickup_Delivery_Route__c/fields/Delivery_Route_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Route_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Route Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pickup_Delivery_Routes2</relationshipName>
    <type>Lookup</type>
</CustomField>