force-app/main/default/objects/Pickup_Delivery_Route__c/fields/Delivery_Route_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Route_Number__c</fullName>
    <label>Delivery Route Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>