force-app/main/default/objects/Pickup_Delivery_Route__c/fields/Delivery_Route_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Route_Time__c</fullName>
    <label>Delivery Route Time</label>
    <type>DateTime</type>
</CustomField>