force-app/main/default/objects/Pickup_Delivery_Route__c/fields/Delivery_Route_Time_Slot_From_3__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Route_Time_Slot_From_3__c</fullName>
    <label>Delivery Route Time Slot From 3</label>
    <type>Time</type>
</CustomField>