force-app/main/default/objects/Pickup_Delivery_Route__c/fields/Delivery_Route_Time_Slot_To_1__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Route_Time_Slot_To_1__c</fullName>
    <label>Delivery Route Time Slot To 1</label>
    <type>Time</type>
</CustomField>