force-app/main/default/objects/Pickup_Delivery_Route__c/fields/Hub__c.field-meta.xml
<CustomField>
    <fullName>Hub__c</fullName>
    <label>Hub</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>Pickup &amp; Delivery Routes</relationshipLabel>
    <relationshipName>Pickup_Delivery_Routes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>