force-app/main/default/objects/Pickup_Delivery_Route__c/fields/Pickup_Route_Assigned_At__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Route_Assigned_At__c</fullName>
    <label>Pickup Route Assigned At</label>
    <type>Time</type>
</CustomField>