force-app/main/default/objects/Pickup_Delivery_Route__c/fields/Pickup_Route_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Route_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup Route Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pickup_Delivery_Routes</relationshipName>
    <type>Lookup</type>
</CustomField>