force-app/main/default/objects/Pickup_Delivery_Route__c/fields/Pickup_Route_Time__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Route_Time__c</fullName>
    <label>Pickup Route Time</label>
    <type>DateTime</type>
</CustomField>