force-app/main/default/objects/Pickup_Delivery_Route__c/fields/Pickup_Route_Time_Slot_3__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Route_Time_Slot_3__c</fullName>
    <label>Pickup Route Time Slot 3</label>
    <type>Time</type>
</CustomField>