force-app/main/default/objects/Pickup_Delivery_Route__c/fields/Pickup_Route_Time_Slot_From_1__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Route_Time_Slot_From_1__c</fullName>
    <label>Pickup Route Time Slot From 1</label>
    <type>Time</type>
</CustomField>