force-app/main/default/objects/Pickup_Delivery_Route__c/fields/Pickup_Route_Time_Slot_From_2__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Route_Time_Slot_From_2__c</fullName>
    <label>Pickup Route Time Slot From 2</label>
    <type>Time</type>
</CustomField>