force-app/main/default/objects/Pickup_Delivery_Route__c/recordTypes/Pickup.recordType-meta.xml
<RecordType>
    <fullName>Pickup</fullName>
    <active>true</active>
    <label>Pickup</label>
</RecordType>