force-app/main/default/objects/Pickup_Delivery_Route__c/listViews/AGRA_Routes.listView-meta.xml
<ListView>
    <fullName>AGRA_Routes</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Hub__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Pickup_Route_Assigned_To__c</columns>
    <columns>Delivery_Route_Assigned_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hub__c</field>
        <operation>equals</operation>
        <value>AGRA</value>
    </filters>
    <label>AGRA Routes</label>
    <sharedTo>
        <group>AGRA_Hub</group>
    </sharedTo>
</ListView>