force-app/main/default/objects/Pickup_Delivery_Route__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>RECORDTYPE</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Hub__c</columns>
    <columns>Pickup_Route_Assigned_To__c</columns>
    <columns>Delivery_Route_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>